--- a/css/default_mobile.css
+++ b/css/default_mobile.css
@@ -148,7 +148,7 @@
 @media (max-width: 397px) {
 	.Liberty .nav-wrapper .navbar .navbar-brand {
 		width: 5rem;
-		background: transparent url( //librewiki.net/skins/Liberty/css/../img/logo.png?2015-12-18T21:00:00Z ) no-repeat scroll left center/auto 1.5rem;
+		background: transparent url( ../img/logo.png ) no-repeat scroll left center/auto 1.5rem;
 	}
 
 	.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .nav-link::after {
