--- a/css/wiki-table.css
+++ b/css/wiki-table.css
@@ -9,7 +9,7 @@
     float: right;
 }
 
-/* 테이블 안 리스트 간격 제거 */
+/* List that inside table margin remove */
 .Liberty .content-wrapper .liberty-content .liberty-content-main .liberty-table-wrapper table ul {
 	margin: 0.3rem 0 0.3rem 0.2rem;
 }
