--- a/css/wiki-table.css
+++ b/css/wiki-table.css
@@ -19,8 +19,8 @@
 	width: auto;
 	background: #fff;
 	border: none;
-	border-radius: 0.35rem;
-	border-collapse: separate;
+	border-radius:0;
+	border-collapse: collapse;
 	border-spacing: 0;
 	float: none;
 	margin: 0.8rem 0;
@@ -60,8 +60,8 @@
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable {
-	border-collapse: separate;
-	border-radius: 0.35rem;
+	border-collapse: collapse;
+	border-radius:0;
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>th,
@@ -87,50 +87,6 @@
 	border-bottom: 1px solid #e1e8ed;
 }
 
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>th:nth-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>td:nth-child( 1 ) {
-	border-radius: 0.35rem 0 0 0;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>th:nth-last-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>td:nth-last-child( 1 ) {
-	border-radius: 0 0.35rem 0 0;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>th:only-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>td:only-child {
-	border-radius: 0.35rem 0.35rem 0 0;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>th:nth-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>td:nth-child( 1 ) {
-	border-radius: 0 0 0 0.35rem;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>th:nth-last-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>td:nth-last-child( 1 ) {
-	border-radius: 0 0 0.35rem 0;
-}
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>th:only-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>td:only-child {
-	border-radius: 0 0 0.35rem 0.35rem;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>th:nth-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>td:nth-child( 1 ) {
-	border-radius: 0.35rem 0 0 0.35rem
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>th:nth-last-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>td:nth-last-child( 1 ) {
-	border-radius: 0 0.35rem 0.35rem 0
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>th:only-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>td:only-child {
-	border-radius: 0.35rem 0.35rem 0.35rem 0.35rem;
-}
-
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable {
 	width: auto;
 }
@@ -153,8 +109,8 @@
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox {
-	border-collapse: separate;
-	border-radius: 0.35rem;
+	border-collapse: collapse;
+	border-radius:0;
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr>th,
@@ -178,50 +134,6 @@
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:last-child>th,
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:last-child>td {
 	border-bottom: 1px solid #e1e8ed;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:first-child>th:nth-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:first-child>td:nth-child( 1 ) {
-	border-radius: 0.35rem 0 0 0;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:first-child>th:nth-last-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:first-child>td:nth-last-child( 1 ) {
-	border-radius: 0 0.35rem 0 0;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:first-child>th:only-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:first-child>td:only-child {
-	border-radius: 0.35rem 0.35rem 0 0;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:last-child>th:nth-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:last-child>td:nth-child( 1 ) {
-	border-radius: 0 0 0 0.35rem;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:last-child>th:nth-last-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:last-child>td:nth-last-child( 1 ) {
-	border-radius: 0 0 0.35rem 0;
-}
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:last-child>th:only-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:last-child>td:only-child {
-	border-radius: 0 0 0.35rem 0.35rem;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:only-child>th:nth-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:only-child>td:nth-child( 1 ) {
-	border-radius: 0.35rem 0 0 0.35rem
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:only-child>th:nth-last-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:only-child>td:nth-last-child( 1 ) {
-	border-radius: 0 0.35rem 0.35rem 0
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:only-child>th:only-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox tr:only-child>td:only-child {
-	border-radius: 0.35rem 0.35rem 0.35rem 0.35rem;
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox th {
