일단 표 바닥은 나오게 해놓음

--- a/css/wiki-table.css
+++ b/css/wiki-table.css
@@ -143,6 +143,7 @@
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>th[rowspan]:first-child,
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>td[rowspan]:first-child {
 	border-right: 0;
+    border-bottom: 1px solid #e1e8ed;
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>th[rowspan]:first-child + td,
