--- a/css/wiki-table.css
+++ b/css/wiki-table.css
@@ -60,97 +60,14 @@
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable {
-	border-collapse: separate;
+	border-collapse: collapse;
 	border-radius: 0.35rem;
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>th,
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>td {
-	border: 0;
+	border: 1px solid #e1e8ed;
 	padding: 0.3rem 0.6rem;
-	border-top: 1px solid #e1e8ed;
-	border-right: 1px solid #e1e8ed;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>th:first-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>td:first-child {
-	border-left: 1px solid #e1e8ed;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>th:last-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>td:last-child {
-	border-right: 1px solid #e1e8ed;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>th,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>td {
-	border-bottom: 1px solid #e1e8ed;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>th:nth-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>td:nth-child( 1 ) {
-	border-radius: 0.35rem 0 0 0;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>th:nth-last-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>td:nth-last-child( 1 ) {
-	border-radius: 0 0.35rem 0 0;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>th:only-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:first-child>td:only-child {
-	border-radius: 0.35rem 0.35rem 0 0;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>th:nth-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>td:nth-child( 1 ) {
-	border-radius: 0 0 0 0.35rem;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>th:nth-last-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>td:nth-last-child( 1 ) {
-	border-radius: 0 0 0.35rem 0;
-}
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>th:only-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:last-child>td:only-child {
-	border-radius: 0 0 0.35rem 0.35rem;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>th:nth-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>td:nth-child( 1 ) {
-	border-radius: 0.35rem 0 0 0.35rem
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>th:nth-last-child( 1 ),
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>td:nth-last-child( 1 ) {
-	border-radius: 0 0.35rem 0.35rem 0
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>th:only-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr:only-child>td:only-child {
-	border-radius: 0.35rem 0.35rem 0.35rem 0.35rem;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable {
-	width: auto;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable th {
-	background-color: #f5f8fa;
-	text-align: center;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>th[rowspan]:first-child,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>td[rowspan]:first-child {
-	border-right: 0;
-    border-bottom: 1px solid #e1e8ed;
-}
-
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>th[rowspan]:first-child + td,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>th[rowspan]:first-child + th,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>td[rowspan]:first-child + td,
-.Liberty .content-wrapper .liberty-content .liberty-content-main table.wikitable tr>td[rowspan]:first-child + th {
-	border-left: 1px solid #e1e8ed;
 }
 
 .Liberty .content-wrapper .liberty-content .liberty-content-main table.infobox {
