--- a/css/only-mw.css
+++ b/css/only-mw.css
@@ -282,6 +282,11 @@ fieldset {
 	overflow-x: scroll;
 }
 
+/* toc margin */
+.toc ul ul {
+    margin: 0 0 0 2em;
+/* toc margin end */	
+
 /* Extensions */
 
 /* MsUpload */
@@ -291,3 +296,4 @@ html #msupload-dropzone {
 /* MsUpload End */
 
 /* Extensions End */
+
