--- a/css/only-mw.css
+++ b/css/only-mw.css
@@ -236,7 +236,7 @@ input:not( [type=button] ):not( [type=checkbox] ):not( [type=submit] ) {
 }
 
 html input.oo-ui-inputWidget-input[type=search]{
-	padding-left: 2.5em;
+	padding-left: 2.5em!important;
 }
 
 select:focus,
