--- a/css/default.css
+++ b/css/default.css
@@ -363,6 +363,7 @@ strike {
 
 .Liberty .content-wrapper .liberty-sidebar .liberty-right-fixed {
 	position: fixed;
+	z-index: 1;
 }
 
 .Liberty .content-wrapper .liberty-sidebar .liberty-right-fixed .live-recent {
