--- a/css/extensions/RelatedArticles.css
+++ b/css/extensions/RelatedArticles.css
@@ -1,12 +1,12 @@
 .read-more-container {
-  margin: 0;
+  margin: 0 !important;
 }
 .read-more-container .ra-read-more {
-  padding: 0;
+  padding: 0 !important;
 }
 .read-more-container .ext-related-articles-card-list {
-  display: flex;
+  display: flex !important;
 }
 .read-more-container .ext-related-articles-card-detail {
-  margin-right: 1rem;
+  margin-right: 1rem !important;
 }
