--- a/css/font/Nanum Gothic.css
+++ b/css/font/Nanum Gothic.css
@@ -16,7 +16,7 @@
 	font-style: normal;
 	font-weight: 700;
 	src: url( //fonts.gstatic.com/ea/nanumgothic/v5/NanumGothic-Bold.eot );
-	src: url( //fonts.gstatic.com/ea/nanumgothic/v5/NanumGothic-Bold.eot?#iefix ) format( 'embedded-opentype' ),
+	src: url( //fonFts.gstatic.com/ea/nanumgothic/v5/NanumGothic-Bold.eot?#iefix ) format( 'embedded-opentype' ),
 	url( //fonts.gstatic.com/ea/nanumgothic/v5/NanumGothic-Bold.woff2 ) format( 'woff2' ),
 	url( //fonts.gstatic.com/ea/nanumgothic/v5/NanumGothic-Bold.woff ) format( 'woff' ),
 	url( //fonts.gstatic.com/ea/nanumgothic/v5/NanumGothic-Bold.ttf ) format( 'truetype' );
