--- a/css/wikiedittor-liberty.css
+++ b/css/wikiedittor-liberty.css
@@ -3,7 +3,8 @@
 	background-color: #0275d8;
 }
 
-#wpSave:hover, #wpSave:active {
+#wpSave:hover,
+#wpSave:active {
 	background-color: #025aa5;
 }
 
@@ -34,9 +35,11 @@ html .editButtons input:first-child {
 .editButtons .cancelLink {
 	margin: 0;
 }
+
 .editButtons * {
 	margin-top: 0.2rem;
 }
+
 /* Button End */
 
 html .wikiEditor-ui-tabs {
