--- a/css/default.css
+++ b/css/default.css
@@ -794,8 +794,8 @@ caption {
 /* Adsense */
 ins.adsbygoogle {
 	display: block;
-	width: 100%;
-	height: 90px;
+	width: 100%!important;
+	height: 90px!important;
 }
 
 .header-ads>ins {
